[package]
description = "Bindings to the Uploads.im web API"
authors = ["Erich Gubler <erichdongubler@gmail.com>"]
name = "uploads-im-client"
license = "Apache-2.0/MIT"
version = "0.1.0"

[dependencies]
derive_builder = "0.5.1"
failure = "0.1.1"
log = "0.4.0"
reqwest = "0.8.1"
serde = "1.0.24"
serde_derive = "1.0.24"
serde_json = "1.0.8"
serde_urlencoded = "0.5.1"
try_from = "0.2.2"
url = "1.6.0"
url_serde = "0.2.0"
webbrowser = "0.2.2"

[dev-dependencies]
fern = "0.5.1"
structopt = "0.1.6"
structopt-derive = "0.1.6"
