[package]
description = "Bindings to the Uploads.im web API"
authors = ["Erich Gubler <erichdongubler@gmail.com>"]
name = "uploads-im-client"
license = "Apache-2.0/MIT"
readme = "README.md"
version = "0.1.1"
homepage = "https://github.com/erichdongubler/uploads-im-client-rs"
documentation = "https://docs.rs/uploads-im-client"
repository  = "https://github.com/erichdongubler/uploads-im-client-rs"
categories = ["web-programming::http-client", "multimedia::images", "api-bindings"]

[badges]
appveyor = { repository = "erichdongubler/uploads-im-client-rs", branch = "master", service = "github" }
maintenance = { status = "actively-developed" }
travis-ci = { repository = "ErichDonGubler/uploads-im-client-rs", branch = "master" }

[dependencies]
derive_builder = "0.7.0"
failure = "0.1.1"
log = "0.4.0"
reqwest = "0.9.0"
serde = "1.0.24"
serde_derive = "1.0.24"
serde_json = "1.0.8"
serde_urlencoded = "0.5.1"
try_from = "0.3.0"
url = "1.6.0"
url_serde = "0.2.0"

[dev-dependencies]
fern = "0.5.1"
structopt = "0.2.10"
structopt-derive = "0.2.10"
webbrowser = "0.5.0"
