[package]
description = "Bindings to the Uploads.im web API"
authors = ["Erich Gubler <erichdongubler@gmail.com>"]
name = "uploads-im-client"
license = "Apache-2.0/MIT"
readme = "README.md"
version = "0.2.0"
homepage = "https://github.com/erichdongubler/uploads-im-client-rs"
documentation = "https://docs.rs/uploads-im-client"
repository  = "https://github.com/erichdongubler/uploads-im-client-rs"
categories = ["web-programming::http-client", "multimedia::images", "api-bindings"]
edition = "2018"

[badges]
appveyor = { repository = "erichdongubler/uploads-im-client-rs", branch = "master", service = "github" }
maintenance = { status = "actively-developed" }
travis-ci = { repository = "ErichDonGubler/uploads-im-client-rs", branch = "master" }

[dependencies]
derive_builder = "0.9"
log = "0.4"
reqwest = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.6"
thiserror = "1.0"
url = { version = "2.0", features = ["serde"] }

[dev-dependencies]
anyhow = "1.0"
env_logger = "0.7"
itertools = "0.9"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["macros"] }
webbrowser = "0.5"
